--- a/css/main.css
+++ b/css/main.css
@@ -262,7 +262,7 @@ section.time-line {
 }
 section.time-line .header-content {
   position: relative;
-  text-align: center;
+  text-align: justify;
   padding: 100px 15px 100px;
   width: 100%;
     color: #000000;
