--- a/css/main.css
+++ b/css/main.css
@@ -299,9 +299,11 @@ section.time-line .header-content .header-content-inner p {
   section.time-line .header-content {
     position: absolute;
     top: 50%;
+      <--!
     -webkit-transform: translateY(-50%);
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
+      -->
     padding: 0 50px;
   }
   section.time-line .header-content .header-content-inner {
