--- a/css/main.css
+++ b/css/main.css
@@ -299,7 +299,7 @@ section.time-line .header-content .header-content-inner p {
   section.time-line .header-content {
     position: absolute;
     top: 50%;
-      <--!
+      <!--
     -webkit-transform: translateY(-50%);
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
