--- a/css/main.css
+++ b/css/main.css
@@ -253,6 +253,9 @@ h1 {
     font-size: 60px;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
+h2.FAQ {
+    margin-top:40px 
+}
 p {
     font-size: 1.5em;
     line-height: 1.4em;
