--- a/css/main.css
+++ b/css/main.css
@@ -43,6 +43,10 @@ header.less-whitespace .header-content {
     transform: translateY(-50%);
     padding: 0 50px;
     }
+    h2.FAQ {
+    margin-top:-20%;
+    padding-top:20%;       
+}
 }
 header.less-whitespace .header-content {
     position: absolute;
