--- a/css/main.css
+++ b/css/main.css
@@ -257,6 +257,12 @@ h2.FAQ {
     margin-top:-55px;
     padding-top:55px;       
 }
+@media (min-width: 768px) {
+    h2.FAQ {
+    margin-top:-100px;
+    padding-top:100px;       
+    }
+}
 p {
     font-size: 1.5em;
     line-height: 1.4em;
