--- a/css/main.css
+++ b/css/main.css
@@ -262,12 +262,12 @@ h2.FAQ {
     margin-top:-100px;
     padding-top:100px;       
     }    
-    h1.FAQ {
+    h2.FAQ2 {
     margin-top:-100px;
     padding-top:100px;       
     }
 }
-h1.FAQ {
+h2.FAQ2 {
     margin-top:-55px;
     padding-top:55px;       
 }
