--- a/css/main.css
+++ b/css/main.css
@@ -257,6 +257,11 @@ h2.FAQ {
     margin-top:-55px;
     padding-top:55px;       
 }
+h2.FAQ2 {
+    margin-top:-55px;
+    padding-top:55px;  
+    color: #0020C2;
+}
 @media (min-width: 768px) {
     h2.FAQ {
     margin-top:-100px;
@@ -266,10 +271,6 @@ h2.FAQ {
     margin-top:-100px;
     padding-top:100px;       
     }
-}
-h2.FAQ2 {
-    margin-top:-55px;
-    padding-top:55px;       
 }
 p {
     font-size: 1.5em;
