--- a/css/main.css
+++ b/css/main.css
@@ -264,7 +264,7 @@ h1 {
 h2.FAQ {
     margin-top:-55px;
     padding-top:55px;  
-    text-indent: 50px;
+    padding-left: 50px;
 }
 h2.FAQ2 {
     margin-top:-55px;
@@ -289,7 +289,7 @@ p.QA {
     padding-bottom: 30px;
     margin-top:-55px;
     padding-top:55px;  
-    text-indent: 50px;
+    padding-left: 50px;
 }
 .box_textshadow {
      text-shadow: 1px 1px 1px #ccc; /* FF3.5+, Opera 9+, Saf1+, Chrome, IE10 */
