--- a/css/main.css
+++ b/css/main.css
@@ -219,7 +219,7 @@ a.FAQ:hover {
 }
 a.FAQ2 {
     text-decoration: none;
-    color: #4E8975;
+    color: #B6B6B4;
 }
 a.FAQ2:hover {
     text-decoration: none;
