--- a/css/main.css
+++ b/css/main.css
@@ -367,6 +367,7 @@ section.time-line .header-content .header-content-inner p {
 .column {
     float: left;
     width: 33.3%;
+    height: 750px;
     margin-bottom: 16px;
     padding: 0 8px;
 }
