--- a/css/main.css
+++ b/css/main.css
@@ -383,6 +383,7 @@ section.time-line .header-content .header-content-inner p {
 /* Add some shadows to create a card effect */
 .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    height: 600px;
 }
 
 /* Some left and right padding inside the container */
